--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,27 @@
+@font-face {
+  font-family: 'Manrope';
+  src: url("../fonts/Manrope-Medium.woff2") format("woff2"), url("../fonts/Manrope-Medium.woff") format("woff");
+  font-weight: 500;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Manrope';
+  src: url("../fonts/Manrope-Bold.woff2") format("woff2"), url("../fonts/Manrope-Bold.woff") format("woff");
+  font-weight: bold;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Manrope';
+  src: url("../fonts/Manrope-SemiBold.woff2") format("woff2"), url("../fonts/Manrope-SemiBold.woff") format("woff");
+  font-weight: 600;
+  font-style: normal;
+  font-display: swap;
+}
+
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
 /* Document
    ========================================================================== */
@@ -345,6 +369,7 @@ html {
   height: 100%;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
+  scroll-behavior: smooth;
 }
 
 *,
@@ -355,10 +380,33 @@ html {
   scroll-behavior: smooth;
 }
 
+main {
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
+}
+
 body {
-  font-family: 'Arial', 'sans-serif';
+  font-family: 'Montserrat', sans-serif;
   margin: 0;
   padding: 0;
+  background: #1C1C1E;
+  background-image: url("../images/bg.svg");
+  background-repeat: no-repeat;
+  background-size: 642px;
+  background-position-x: calc(100%);
+  background-position-y: calc(400%);
+}
+
+body::after {
+  position: absolute;
+  content: '';
+  display: block;
+  width: 2.50px;
+  height: 100%;
+  background-color: #fff;
+  left: calc(50% + 112px);
+  top: 0;
 }
 
 img {
@@ -379,7 +427,609 @@ img {
 }
 
 .container {
+  width: 100%;
+  max-width: 1280px;
   margin: 0 auto;
   padding: 0 20px;
+}
+
+.site-header {
+  padding-top: 65px;
+  padding-bottom: 92px;
+}
+
+.header {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.header__list {
+  margin: 0;
+  padding: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  list-style: none;
+  margin-right: 50px;
+}
+
+.header__item {
+  font-family: "Manrope";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 23px;
+  opacity: 0.3;
+  -webkit-transition: all 0.5s;
+  transition: all 0.5s;
+}
+
+.header__item + .header__item {
+  margin-left: 35px;
+}
+
+.header__item:hover {
+  font-family: "Manrope";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 23px;
+  -webkit-text-decoration-line: line-through;
+          text-decoration-line: line-through;
+  opacity: 1;
+}
+
+.header__item-link {
+  text-decoration: none;
+  color: #fff;
+}
+
+.header__item-link:hover {
+  opacity: 1;
+  color: #FFFFFF;
+}
+
+.header__link {
+  text-decoration: none;
+}
+
+.header__left {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.header__lengs {
+  padding: 6px 10px;
+  border: 1px solid #A8A7A9;
+  border: 1px solid #A8A7A9;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  border-radius: 75px;
+}
+
+.header__lang-link {
+  text-decoration: none;
+  font-family: "Manrope";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 23px;
+  color: #FFFFFF;
+  opacity: 0.3;
+  -webkit-transition: all 0.5s;
+  transition: all 0.5s;
+}
+
+.header__lang-link + .header__lang-link {
+  margin-left: 10px;
+}
+
+.header__lang-link:hover {
+  opacity: 1;
+}
+
+.line {
+  border: 1px solid #FFFFFF;
+  background: #fff;
+}
+
+.header__btn {
+  z-index: 100000;
+  border: none;
+  background: transparent;
+  display: none;
+}
+
+.header__hum-list {
+  margin-left: auto;
+  margin-right: auto;
+  position: absolute;
+  right: 0;
+  left: 0;
+  top: 71px;
+  bottom: 0;
+  width: 350px;
+  margin: 0 auto;
+  padding: 0;
+  list-style-type: none;
+}
+
+.header__hum-item {
+  width: 100%;
+  padding: 10px 262px 10px 15px;
+  font-family: "Manrope";
+  font-style: normal;
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 22px;
+  -webkit-box-flex: 0;
+      -ms-flex: none;
+          flex: none;
+  -webkit-box-ordinal-group: 1;
+      -ms-flex-order: 0;
+          order: 0;
+  -ms-flex-positive: 0;
+      flex-grow: 0;
+  margin: 0px 10px;
+  border-radius: 50px;
+}
+
+.header__hum-item:hover {
+  background-color: #0040DD;
+}
+
+.header__jum-item-link {
+  text-decoration: none;
+  color: #FFFFFF;
+  opacity: 0.3;
+}
+
+.header__jum-item-link:hover {
+  background-color: #0040DD;
+  opacity: 1;
+}
+
+.header__hum-list {
+  display: none;
+  margin-top: 71px;
+  margin-left: 0;
+  margin-right: 0;
+}
+
+.bol {
+  display: block;
+}
+
+.open {
+  display: block;
+}
+
+.nones {
+  display: none;
+}
+
+.block {
+  display: block;
+}
+
+@media only screen and (max-width: 1129px) {
+  body::after {
+    display: none;
+  }
+}
+
+@media only screen and (max-width: 615px) {
+  .line {
+    display: none;
+  }
+  .header__list {
+    display: none;
+  }
+  .header__btn {
+    display: block;
+  }
+  .header__lengs {
+    margin-right: 25px;
+  }
+  .open {
+    width: 100%;
+  }
+  .site-header {
+    padding-bottom: 0;
+  }
+}
+
+@media only screen and (max-width: 435px) {
+  .header__lengs {
+    display: none;
+  }
+  .site-header {
+    padding-top: 25px;
+  }
+  .header__img {
+    width: 71px;
+    height: 29px;
+  }
+}
+
+.form-section {
+  padding-top: 50px;
+}
+
+.form {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.form-section {
+  padding-bottom: 235px;
+}
+
+.form-section-inner {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.form__label {
+  width: 50%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  font-family: "Manrope";
+  font-style: normal;
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 23px;
+  color: #FFFFFF;
+}
+
+.form__right-box {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.form__inp {
+  color: #fff;
+  padding: 14px 25px;
+  background: rgba(255, 255, 255, 0.1);
+  border: 1px solid #FFFFFF;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  -webkit-backdrop-filter: blur(174px);
+          backdrop-filter: blur(174px);
+  border-radius: 25px;
+  margin-top: 10px;
+  margin-bottom: 20px;
+}
+
+.form__select {
+  padding: 12px 25px;
+  background: -webkit-gradient(linear, left bottom, left top, from(rgba(255, 255, 255, 0.1)), to(rgba(255, 255, 255, 0.1)));
+  background: linear-gradient(0deg, rgba(255, 255, 255, 0.1), rgba(255, 255, 255, 0.1));
+  border: 1px solid #FFFFFF;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  -webkit-backdrop-filter: blur(174px);
+          backdrop-filter: blur(174px);
+  border-radius: 25px;
+  color: #fff;
+  margin-top: 10px;
+}
+
+.form__option {
+  font-family: "Manrope";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 22px;
+  background: dimgray;
+  border-radius: 24px;
+  outline: none;
+}
+
+.inp1 {
+  width: 393px;
+}
+
+.inp2 {
+  width: 338px;
+}
+
+.inp3 {
+  width: 287px;
+}
+
+.form__right-lab {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  font-family: "Manrope";
+  font-style: normal;
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 23px;
+  color: #FFFFFF;
+  margin-bottom: 20px;
+}
+
+.form__right-inp {
+  margin-top: 10px;
+  color: #fff;
+  padding: 14px 25px;
+  background: rgba(255, 255, 255, 0.1);
+  border: 1px solid #FFFFFF;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  -webkit-backdrop-filter: blur(174px);
+          backdrop-filter: blur(174px);
+  border-radius: 25px;
+}
+
+.form__right-sel {
+  margin-top: 10px;
+  padding: 12px 25px;
+  background: -webkit-gradient(linear, left bottom, left top, from(rgba(255, 255, 255, 0.1)), to(rgba(255, 255, 255, 0.1)));
+  background: linear-gradient(0deg, rgba(255, 255, 255, 0.1), rgba(255, 255, 255, 0.1));
+  border: 1px solid #FFFFFF;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  -webkit-backdrop-filter: blur(174px);
+          backdrop-filter: blur(174px);
+  border-radius: 25px;
+  color: #fff;
+}
+
+.form__right-op {
+  background: dimgray;
+}
+
+.form__right {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
+  margin-left: -76px;
+}
+
+.in1 {
+  width: 288px;
+}
+
+.in2 {
+  width: 338px;
+}
+
+.in3 {
+  width: 394px;
+}
+
+.form__last-lab {
+  font-family: "Manrope";
+  font-style: normal;
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 23px;
+  color: #FFFFFF;
+}
+
+.form__last-inp {
+  background: rgba(255, 255, 255, 0.1);
+  border: 1px solid #FFFFFF;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  -webkit-backdrop-filter: blur(174px);
+          backdrop-filter: blur(174px);
+  border-radius: 25px;
+  width: 100%;
+  height: 168px;
+  margin-top: 10px;
+  color: #fff;
+}
+
+.form__btn {
+  margin-top: 20px;
+  border: none;
+  background: #0040DD;
+  border-radius: 50px;
+  color: #fff;
+  width: 127px;
+  font-family: Manrope;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 22px;
+  color: #FFFFFF;
+  padding: 11px 12px 12px 15px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  position: relative;
+}
+
+.form__btn::after {
+  content: '';
+  display: block;
+  background-image: url("../images/left.svg");
+  background-repeat: no-repeat;
+  width: 18px;
+  height: 18px;
+  position: absolute;
+  right: 16px;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+.form-right-content {
+  width: 440px;
+}
+
+.form-right__title {
+  margin: 0;
+  padding: 0;
+  font-family: "Manrope";
+  font-style: normal;
+  font-weight: bold;
+  font-size: 32px;
+  line-height: 40px;
+  color: #FFFFFF;
+}
+
+.form-right__text {
+  margin: 0;
+  padding: 0;
+  font-family: "Manrope";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 26px;
+  color: #FFFFFF;
+  opacity: 0.6;
+  margin-top: 30px;
+}
+
+@media only screen and (max-width: 1248px) {
+  body::after {
+    display: none;
+  }
+}
+
+@media only screen and (max-width: 1196px) {
+  .form {
+    margin-left: auto;
+    margin-right: auto;
+  }
+  .form-section-inner {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: reverse;
+        -ms-flex-direction: column-reverse;
+            flex-direction: column-reverse;
+  }
+  .form-right-content {
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
+
+@media only screen and (max-width: 744px) {
+  .form {
+    width: 100%;
+    margin-left: 0;
+    margin-right: 0;
+  }
+  .form__right-box {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    width: 100%;
+  }
+  .form__left {
+    width: 100%;
+  }
+  .form__label {
+    margin: 0;
+    width: 100%;
+  }
+  .form__select {
+    width: 100%;
+  }
+  .form__inp {
+    width: 100%;
+  }
+  .form__right {
+    margin-top: 20px;
+    width: 100%;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  .form__right-lab {
+    width: 100%;
+  }
+  .form__right-inp {
+    width: 100%;
+  }
+  .form__right-sel {
+    width: 100%;
+  }
+  .form-section {
+    padding-top: 30px;
+  }
+  .form-right-content {
+    margin-left: 0;
+    margin-right: 0;
+    margin-bottom: 40px;
+  }
+  .delete {
+    display: none;
+  }
+}
+
+@media only screen and (max-width: 514px) {
+  .form-right-content {
+    width: 100%;
+  }
+  .form__last-lab {
+    display: none;
+  }
+  .form__last-inp {
+    display: none;
+  }
+  .form__btn {
+    width: 100%;
+    text-align: center;
+    margin-top: 0;
+  }
+  body {
+    background-position: center;
+    color: #fff;
+    background-position-y: calc(50% + 350px);
+  }
 }
 /*# sourceMappingURL=main.css.map */
