--- a/css/main.css
+++ b/css/main.css
@@ -599,6 +599,7 @@ img {
 
 .header__jum-item-link:hover {
   opacity: 1;
+  color: #fff;
   background-color: #0040DD;
 }
 
@@ -935,7 +936,7 @@ img {
   width: 440px;
 }
 
-.form-right__title {
+.form-right-title {
   margin: 0;
   padding: 0;
   font-family: "Manrope";
@@ -946,7 +947,7 @@ img {
   color: #FFFFFF;
 }
 
-.form-right__text {
+.form-right-text {
   margin: 0;
   padding: 0;
   font-family: "Manrope";
