--- a/scss/blocks/_form-section.scss
+++ b/scss/blocks/_form-section.scss
@@ -176,7 +176,7 @@ width: 287px;
 .form-right-content {
     width: 440px;
 }
-.form-right__title {
+.form-right-title {
     margin: 0;
     padding: 0;
     font-family: "Manrope";
@@ -187,7 +187,7 @@ width: 287px;
     color: #FFFFFF;
 
 }
-.form-right__text {
+.form-right-text {
      margin: 0;
      padding: 0;
      font-family: "Manrope";
